<resources>
    <string name="app_name">Care4Uv2.3</string>
    <string name="action_settings">Settings</string>
    <string name="delete_contact">Delete contacts</string>

    <string name="rewrite_new_device">Rewrite new device</string>

    <string name="action_out">Out</string>
    <string name="action_stop_gps">Stop spying</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="ImageTitle">imageTitle</string>
    <string name="title_activity_employee_registration">EmployeeRegistrationActivity</string>
    <string name="title_activity_manager_registration">ManagerRegistrationActivity</string>
    <string name="EmailTxt">E-mail</string>
    <string name="title_activity_employee_cabinet">EmployeeCabinetActivity</string>
    <string name="goToRegEmplTitle">Empployee registration</string>
    <string name="goToMngrRegTitle">Manager registration</string>
    <string name="txtEmailTitle">E- mail</string>
    <string name="txtSecrN">Secret Name</string>
    <string name="RegManagerTitle">Registrate manager</string>
    <string name="EmailEmployeeTxtTitle">E-mail</string>
    <string name="RegEmployeeTitle">registrate employee</string>

    <string name="RefreshEmployeeMap">refresh map</string>
    <string name="MangrEmailEmployeeCabinetTxtTitle">Manager E-mail</string>

    <string name="Cabinet">Employee cabinet</string>
    <string name="title_activity_manager_cabinet">ManagerCabinetActivity</string>
    <string name="box">Принять</string>
    <string name="EmployeeReqTitle">See Request</string>
    <string name="ManagerCabinetTitle">Manager Cabinet</string>
    <string name="EmployeeCabinetTitle">Employee cabinet</string>
    <string name="managerEmailTitle">Manager email</string>
    <string name="getHiredTitle">get hired</string>
    <string name="sosTitle">S O S</string>
    <string name="confirmEBTitle">Confirm</string>
    <string name="checkTitle">my info</string>
    <string name="checkIngEmployeeButtnTitle">my info</string>
    <string name="title_activity_user_maps">UserMapsActivity</string>
    <string name="managerMapTitle">map</string>
    <string name="spyTitle">SPY - 007</string>
    <string name="title_activity_emplyee_map">EmplyeeMapActivity</string>
    <string name="resetbtnmng">SPY - 007</string>
    <string name="enteremailText">Enter Employee Email</string>
    <string name="EnterRadiusText">Enter Radius</string>
    <string name="enterRadiusTitle">Enter Radius</string>
    <string name="SosButtonFromMapTitle">SOS</string>
    <string name="title_activity_employee_map_map">EmployeeMapMapActivity</string>
    <string name="buttonTitleFortest">Test</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="SignInGTitlle">Sign in with Google+</string>
    <string name="btnGPlusTitle">Sign in with Google+</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_employee_requests">EmployeeRequestsActivity</string>
    <string name="confirmImg">android:src=@drawable/confirm</string>
    <string name="EmployeeLocTitle">Eloc</string>


    <string name="item1">Confirm</string>
    <string name="title_activity_manager_cabinet_list">ManagerCabinetListActivity</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>

    <string name="transition_name_phone">transition:PHONE</string>
    <string name="MyFriendiTitle">My Friends</string>


    <string name="item2">Employee requests</string>
    <string name="care4u">Care4U</string>
    <string name="logo">Help Keep Kids</string>
    <string name="logoButton">SAFE</string>
    <string name="out">out</string>
    <string name="IconNik">30dp</string>
    <string name="contact">contact</string>
    <string name="contact_email">john@gmail.com</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="refresh">Refresh location</string>
    <string name="start_spy">Start spy</string>
    <string name="request">Request</string>
    <string name="openMap">Map</string>
    <string name="dummy">Dummy</string>
    <string name="none">None</string>
    <string name="title_activity_test_data_base">TestDataBaseActivity</string>
    <string name="click_here_to_set_a_circular_area"> Try to move a green circle by simply click, to set best circle position. </string>
    <string name="set_radius_of_circle">Set radius of circle</string>

    <string name="set_radius">Enter radius</string>


    <string name="title_single_shot">1. Set position  </string>
    <string name="sum_single_shot">  Simply click </string>
    <string name="R.string.desc_single_shot">   Try to move a green circle by simply clicking. \ And set better position for circle.</string>


    <string name="title_for_set_radius_tip">2. Set radius </string>

    <string name="single_shot_for_set_radius_tip">If U choose best position of transparent green circle.\  Try to set radius of circle in meters.  </string>


    <string name="title_for_begin_spy">3. Begin spy </string>

    <string name="single_shot_for_begin_spy"> Congratulations! Now U can to start spy for employee. \ If U see stop item, it means spying is going now. Just stop this spying, and begin new. </string>

    <string name="title_for_stop_spy">3. Stop spy </string>

    <string name="single_shot_for_stop_spy">  Now U can to stop spy for employee. \ And after begin new spy.   </string>
    <string name="to_refresh_employee_position">To refresh employee position</string>
    <string name="title_activity_prompt_to_change_loc_sett">PromptToChangeLocSettActivity</string>
    <string name="title_activity_turn_gpsfrom_prompt">TurnGPSFromPromptActivity</string>
    <string name="try_to_get_location">Try to get location...</string>


</resources>
