<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.quest.uni2b.appengine.gsm.demo.usertouserdemo2svn020316.MainActivity">

    <item
        android:id="@+id/myRefresh"
        android:icon="@mipmap/refresh"
        app:showAsAction="always"
        android:title="@string/refresh"/>


    <item
        android:id="@+id/myEmployeeRequest"
        android:icon="@mipmap/new_f"
        app:showAsAction="always"
        android:title="@string/request"/>



   <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_delete_contact"
        android:orderInCategory="100"
        android:title="@string/delete_contact"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_rewrite_new_device_m"
        android:orderInCategory="100"
        android:title="@string/rewrite_new_device"
        app:showAsAction="never" />-->

   <!-- <item
        android:id="@+id/action_stop_gps_service"
        android:orderInCategory="100"
        android:title="@string/action_stop_gps"
        app:showAsAction="never" />-->


    <item
        android:id="@+id/action_out"
        android:orderInCategory="100"
        android:title="@string/action_out"
        app:showAsAction="never" />




</menu>
