<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.quest.uni2b.appengine.gsm.demo.usertouserdemo2svn020316.Main2Activity"
    android:background="@drawable/bg_img"
    tools:showIn="@layout/activity_main2">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/linearLayout7">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/linearlayout_blue_bg"
            android:id="@+id/linearLayout5"
            android:layout_marginTop="23dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/care"
                android:contentDescription=""
                android:id="@+id/imageView"


                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"

                />

            <TextView
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="25sp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/care4u"
                android:id="@+id/Care4U"


                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"


                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logo"
            android:id="@+id/textView2"
            android:textStyle="italic"
            android:textSize="15sp"
            android:paddingTop="30dp"


            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logoButton"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="30sp"
            android:paddingBottom="30dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_bg"
            android:padding="10dp"
            android:id="@+id/linearLayout4"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnGplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/ButtonText"
                android:background="@drawable/layers_gplus_button_bg"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="30dp"
                    android:text="@string/btnGPlusTitle"
                />
                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
