<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".employee.EmployeeCabinetActivity"

    tools:showIn="@layout/activity_employee_cabinet"
    android:background= "@color/icons">



    <!--
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkIngEmployeeButtnTitle"
        android:id="@+id/checkEmployeeInfoButtn"
        android:layout_below="@+id/linearLayout9"
        android:layout_toEndOf="@+id/linearLayout9" />
        -->



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout8"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:id="@+id/textViewNik"
            android:paddingBottom="20dp"

            android:textStyle="bold|italic"
            android:layout_gravity="right"
            android:textSize="12sp" />

        <Button
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/getHiredTitle"
            android:id="@+id/getHiredButton"
            android:background="#22b4d4"
            android:textStyle="bold"
            android:layout_marginTop="75dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/getManagerEmailTxt"
            android:inputType="none" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/managerEmailTitle"
            android:id="@+id/manageremailText"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/sosTitle"
            android:id="@+id/SOSButton"
            android:layout_gravity="center_horizontal"
            android:background="#ef0707"
            android:contextClickable="false"
            android:textColor="#fcfbfb"
            android:textColorHighlight="#141313"
            android:textStyle="bold"
            android:textSize="@dimen/abc_action_button_min_width_overflow_material"
            android:gravity="center"
            android:drawableEnd="@mipmap/phone"
            android:layout_marginTop="20dp" />

    </LinearLayout>


    <!--
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/out"
         android:id="@+id/outButton"
         android:textColor="#fdfdfd"
         android:background="#e46d6d"
         android:layout_alignTop="@+id/checkEmployeeInfoButtn"
         android:drawableLeft="@mipmap/out"
         android:layout_alignParentEnd="true" />
         -->

</RelativeLayout>
