<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".manager.ManagerMap.UserMapsActivity">



<android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:paddingTop="8dp"
            android:transitionGroup="false"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


                     <!--  <ImageView
                android:id="@android:id/icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:importantForAccessibility="no"
                android:gravity="center_vertical"
                android:src="@mipmap/human_i" /> -->


           <!-- <ImageView
                android:id="@android:id/button1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:importantForAccessibility="no"

                android:src="@mipmap/area_i"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />-->





            <!--  Piplup pokemon -->



            <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textColor="@android:color/white"
            android:textSize="18sp"
                android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name_for_radius"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"

                android:layout_gravity="center_vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:id="@+id/inputRadius"
                    android:visibility="invisible"
                    android:hint="@string/set_radius"
                    android:layout_below="@android:id/text1"
                    android:layout_alignParentStart="true"
                    android:gravity="top|center_horizontal"

                    />


            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                >
            <ProgressBar

                android:id="@+id/pbHeaderProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">
            </ProgressBar>

                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/try_to_get_location"
                    android:id="@+id/loadText"
                    android:textSize="11sp"
                    android:textColor="@color/background_color_white"
                    android:textStyle="italic"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/pbHeaderProgress" />


            </RelativeLayout>

        </LinearLayout>




    </android.support.design.widget.AppBarLayout>



    <include layout="@layout/content_user_maps" />
    <include layout="@layout/floating_button_on_map"/>




</android.support.design.widget.CoordinatorLayout>
